test/t54_include_missing.ls
{- #include "test/does_not_exist.ls" -}
()
